--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<div class="navbar">
+    <h4 class="logo">Healthcare</h4>
+    <div>
+      <ul class="a">
+        <li><a routerLink="child-details">Child Info</a></li>
+        <li><a routerLink="vaccine-details">Vaccine Chart</a></li>
+        <li><a routerLink="view">View</a></li>
+      
+      </ul>
+    </div>
+  </div>
