--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+/* Updated CSS with the new color palette */
+
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +8,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin-top: 0;
-    background-color: #070A52;
+    background-color: #070A52; /* Updated background color */
 }
 
 a {
@@ -18,35 +19,30 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
-  
-  .navbar .logo {
+}
+
+.navbar .logo {
     margin-right: 10px;
-  }
-  
-  .navbar ul.a {
+    font-size: 35px;
+    padding-left: 30px;
+    cursor: pointer;
+    color: #fbfff1; /* Text color */
+}
+
+.navbar ul.a {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
     padding: 0;
     margin-bottom: 0;
-  }
-  
-  .navbar ul.a li {
+}
+
+.navbar ul.a li {
     margin-right: 20px;
-  }
-
-
-
-.logo {
-    font-size: 35px;
-    padding-left: 30px;
-    cursor: pointer;
-    color: #fffffe;
 }
 
 ul.a a {
-    color: white;
+    color: #fbfff1; /* Text color */
     font-weight: 900;
 }
 
@@ -55,97 +51,100 @@ ul li {
 }
 
 .btn-primary {
-    background-color: #FF4C29;
-    color: #fffffe;
+    background-color: #090c9b; /* Secondary color */
+    color: #fbfff1; /* Text color */
     outline: none;
     font-weight: 700;
 }
 
 .btn.btn-primary:hover {
-    background: #FF4C29;
-    color: #fffffe;
+    background: #3066be; /* Accent color on hover */
 }
 
 .btn.btn-primary:active {
-    background: #FF4C29;
-    color: #fffffe;
+    background: #3066be; /* Accent color on active */
 }
 
 .add-button {
     padding-left: 30px;
 }
 
-.buttonsize{
+.buttonsize {
     display: flex;
     align-items: center;
 }
 
-
-.panel{
-    background:#2980b9;
+.panel {
+    background: #3066be; /* Accent color */
     padding: 0;
     border-radius: 10px;
     border: none;
-    box-shadow: 0 0 0 5px rgba(0,0,0,0.05),0 0 0 10px rgba(0,0,0,0.05);
+    box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.05), 0 0 0 10px rgba(0, 0, 0, 0.05);
     width: 1100px;
-    
 }
 
-.panel .panel-heading{
+.panel .panel-heading {
     padding: 20px 15px;
     border-radius: 10px 10px 0 0;
     margin: 0;
 }
-.panel .panel-heading .title{
-    color: #fff;
+
+.panel .panel-heading .title {
+    color: #fbfff1; /* Text color */
     font-size: 28px;
     font-weight: 500;
     text-transform: capitalize;
     line-height: 40px;
     margin: 0;
 }
-.panel .panel-heading .btn{
-    color: rgba(255,255,255,0.5);
+
+.panel .panel-heading .btn {
+    color: rgba(255, 255, 255, 0.5);
     background: transparent;
     font-size: 16px;
     text-transform: capitalize;
-    border: 2px solid #fff;
+    border: 2px solid #fbfff1; /* Text color */
     border-radius: 50px;
     transition: all 0.3s ease 0s;
 }
-.panel .panel-heading .btn:hover{
-    color: #fff;
-    text-shadow: 3px 3px rgba(255,255,255,0.2);
+
+.panel .panel-heading .btn:hover {
+    color: #fbfff1; /* Text color */
+    text-shadow: 3px 3px rgba(255, 255, 255, 0.2);
 }
-.panel .panel-heading .form-control{
-    color: #fff;
+
+.panel .panel-heading .form-control {
+    color: #fbfff1; /* Text color */
     background-color: transparent;
     width: 35%;
     height: 40px;
-    border: 2px solid #fff;
+    border: 2px solid #fbfff1; /* Text color */
     border-radius: 20px;
     display: inline-block;
     transition: all 0.3s ease 0s;
 }
-.panel .panel-heading .form-control:focus{
-    background-color: rgba(255,255,255,0.2);
+
+.panel .panel-heading .form-control:focus {
+    background-color: rgba(255, 255, 255, 0.2);
     box-shadow: none;
     outline: none;
 }
-.panel .panel-heading .form-control::placeholder{
-    color: rgba(255,255,255,0.5);
+
+.panel .panel-heading .form-control::placeholder {
+    color: rgba(255, 255, 255, 0.5);
     font-size: 15px;
     font-weight: 500;
 }
-.panel .panel-body{ 
-    padding: 0; 
+
+.panel .panel-body {
+    padding: 0;
     height: 100vh;
     overflow: hidden;
     width: 1100px;
- 
 }
-.panel .panel-body .table thead tr th{
-    color: #fff;
+
+.panel .panel-body .table thead tr th {
+    color: #fbfff1; /* Text color */
     background-color: rgba(255, 255, 255, 0.2);
     font-size: 16px;
     font-weight: 500;
@@ -153,35 +152,46 @@ ul li {
     padding: 12px;
     border: none;
 }
-.panel .panel-body .table tbody tr td{
-   color: black;
+
+.panel .panel-body .table tbody tr td {
+    color: black;
     font-size: 15px;
     padding: 10px 12px;
     vertical-align: center;
     border: none;
 }
-.panel .panel-body .table tbody tr:nth-child(even){ background-color: rgba(255,255,255,0.05); }
-.panel .panel-body .table tbody .action-list{
+
+.panel .panel-body .table tbody tr:nth-child(even) {
+    background-color: rgba(255, 255, 255, 0.05);
+}
+
+.panel .panel-body .table tbody .action-list {
     padding: 0;
     margin: 0;
     list-style: none;
 }
-.panel .panel-body .table tbody .action-list li{
+
+.panel .panel-body .table tbody .action-list li {
     display: inline-block;
     margin: 0 5px;
 }
-.panel .panel-body .table tbody .action-list li a{
-    color: #fff;
+
+.panel .panel-body .table tbody .action-list li a {
+    color: #fbfff1; /* Text color */
     font-size: 15px;
     position: relative;
     z-index: 1;
     transition: all 0.3s ease 0s;
 }
-.panel .panel-body .table tbody .action-list li a:hover{ text-shadow: 3px 3px 0 rgba(255,255,255,0.3); }
+
+.panel .panel-body .table tbody .action-list li a:hover {
+    text-shadow: 3px 3px 0 rgba(255, 255, 255, 0.3);
+}
+
 .panel .panel-body .table tbody .action-list li a:before,
-.panel .panel-body .table tbody .action-list li a:after{
+.panel .panel-body .table tbody .action-list li a:after {
     content: attr(data-tip);
-    color: #fff;
+    color: #fbfff1; /* Text color */
     background-color: #111;
     font-size: 12px;
     padding: 5px 7px;
@@ -194,7 +204,8 @@ ul li {
     top: -32px;
     transition: all 0.3s ease 0s;
 }
-.panel .panel-body .table tbody .action-list li a:after{
+
+.panel .panel-body .table tbody .action-list li a:after {
     content: '';
     height: 15px;
     width: 15px;
@@ -204,9 +215,8 @@ ul li {
     top: -18px;
     z-index: -1;
 }
+
 .panel .panel-body .table tbody .action-list li a:hover:before,
-.panel .panel-body .table tbody .action-list li a:hover:after{
+.panel .panel-body .table tbody .action-list li a:hover:after {
     display: block;
 }
-
-
